主分支提交&

--- a/svgLearn.html
+++ b/svgLearn.html
@@ -16,5 +16,6 @@
 <!-- 添加第二行句子 -->
 <!-- 添加第三行句子 -->
 <!-- 在dev分支下添加内容master/dev修改之 -->
+Creating a new branch is quick & simple
   </body>
 </html>
