--- a/svgLearn.html
+++ b/svgLearn.html
@@ -12,7 +12,7 @@
     <object data="./content/svg/1.网格.svg" type="image/svg+xml" /> -->
 
     <object data="./content/svg/4.路径-曲线命令.svg" type="image/svg+xml" />
-<!-- 添加一行句子 -->
+<!-- 添加一行句子(修复issue101的bug) -->
 <!-- 添加第二行句子 -->
 <!-- 添加第三行句子 -->
 <!-- 在dev分支下添加内容master/dev修改之 -->
