添加textarea的内部style

--- a/htmlLearn/8.textarea和input的样式.html
+++ b/htmlLearn/8.textarea和input的样式.html
@@ -12,6 +12,11 @@
             width: 98vw;
             height: 20vh;
             overflow: visible;
+            box-sizing: border-box;
+            font-size: 18px;
+            padding: 1em;
+            color: brown;
+            font-family: Microsoft YaHei;
         }
 
         #ta::-webkit-scrollbar {
